--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,17 @@
 {
-    "name":        "nick4fake/interkassa",
-    "description": "Library for interkassa APIv2",
-    "license":     "MIT",
-    "authors":     [
-        {
-            "name":  "Anton Suprun",
-            "email": "kpobococ@gmail.com"
-        }
+    "name": "iiifx/interkassa-php",
+    "description": "Interkassa.com library",
+    "keywords": ["interkassa","ik","interkassa.com","payment"],
+    "homepage": "https://github.com/iiifx/interkassa-php.git",
+    "license": "MIT",
+    "authors": [
+        { "name": "Anton Suprun", "email": "kpobococ@gmail.com" },
+        { "name": "Vitaliy IIIFX Khomenko", "email": "iiifx@yandex.com" }
     ],
-    "require":     {
+    "require": {
         "php": ">=5.4"
     },
-    "autoload":    {
-        "files": [
-            "interkassa.php"
-        ]
-    },
-    "extra":       {
-        "branch-alias": {
-            "dev-master": "2-dev"
-        }
-    },
-
-    "minimum-stability": "dev"
+    "autoload": {
+        "psr-4": { "iiifx\\Interkassa\\": "source/" }
+    }
 }
